--- a/certificacao-csharp-pt12/depois/Program01.01/Program01.01.csproj
+++ b/certificacao-csharp-pt12/depois/Program01.01/Program01.01.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Program01._01</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
