--- a/certificacao-csharp-pt12/depois/Program01.01/Program01.01.csproj
+++ b/certificacao-csharp-pt12/depois/Program01.01/Program01.01.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
   </ItemGroup>
 
