--- a/certificacao-csharp-pt12/depois/Program02.01/Program02.01.csproj
+++ b/certificacao-csharp-pt12/depois/Program02.01/Program02.01.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Program02._01</RootNamespace>
+    <StartupObject>Program02._01.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
